...
        android:id="@+id/text_category"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/text_rating"
        app:layout_constraintStart_toStartOf="@+id/text_tahun"
        app:layout_constraintTop_toBottomOf="@+id/text_tahun"
        tools:text="Kategori" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        style="@style/Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_category"
...
